meegotouchhome (0.23.11~1) unstable; urgency=low
  * [UNRELEASED]

 -- Eetu Lehmusvuo <ext-eetu.6.lehmusvuo@nokia.com>  Mon, 28 Feb 2011 14:14:17 +0200

meegotouchhome (0.23.10-1) unstable; urgency=low

  * Fixes: NB#222322 - [Harmmattan03-8]Ovi Store icon is missing after rebooting if user updated the ovi store client

 -- Eetu Lehmusvuo <ext-eetu.6.lehmusvuo@nokia.com>  Mon, 28 Feb 2011 14:14:17 +0200

meegotouchhome (0.23.9-1) unstable; urgency=low

  * Fixes: Launcher buttons were not updated when the .desktop files were modified

 -- Vesa Halttunen <vesa.halttunen@nokia.com>  Thu, 24 Feb 2011 15:47:09 +0200

meegotouchhome (0.23.8-1) unstable; urgency=low

  * Fixes: NB#229767 - meegotouchhome crashes when tapping thumbnail

 -- Vesa Halttunen <vesa.halttunen@nokia.com>  Wed, 23 Feb 2011 19:25:22 +0200

meegotouchhome (0.23.7-1) unstable; urgency=low

  * Fixes: NB#227550 - Manage window backing pixmaps more carefully in SwitcherButtonView

 -- Vesa Halttunen <vesa.halttunen@nokia.com>  Wed, 23 Feb 2011 14:48:30 +0200

meegotouchhome (0.23.6-1) unstable; urgency=low

  * Fixes: NB#220833 - Panning switcher page delivers useless PropertyNotify events to applications
  * Fixes: NB#226086 - Windows that refuse to close when the close button is pressed in Recents do not reappear in Recents in full size

 -- Vesa Halttunen <vesa.halttunen@nokia.com>  Fri, 18 Feb 2011 15:56:35 +0200

meegotouchhome (0.23.5-1) unstable; urgency=low

  * Fixes: NB#226006 Pinch gesture will break portrait only homescreen mode

 -- Pankaj Saharan <pankaj.saharan@nokia.com>  Thu, 10 Feb 2011 16:28:13 +0200

meegotouchhome (0.23.4-1) unstable; urgency=low

  * Removed unnecessary include

 -- Vesa Halttunen <vesa.halttunen@nokia.com>  Tue, 08 Feb 2011 18:15:47 +0200

meegotouchhome (0.23.3-1) unstable; urgency=low

  * Use Name and Icon provided in a .desktop file directly in LauncherButtons instead of getting them from libcontentaction
