@@ -30,7 +30,10 @@ M_REGISTER_WIDGET(SwitcherButton)
 Atom SwitcherButton::visibleAtom = 0;
 
 SwitcherButton::SwitcherButton(QGraphicsItem *parent, SwitcherButtonModel *model) :
-    MButton(parent, model)
+    MButton(parent, model),
+    visibility(false),
+    visibilityPropertyEnabled(true),
+    visibilityInitialized(false)
 {
     // Configure timers
     windowCloseTimer.setSingleShot(true);
@@ -42,10 +45,6 @@ SwitcherButton::SwitcherButton(QGraphicsItem *parent, SwitcherButtonModel *model
     }
 
     connect(this, SIGNAL(clicked()), this, SLOT(switchToWindow()));
-
-    // Initialize to negation to force the property initialization
-    visibility = !isVisible();
-    setVisibilityPropertyEnabled(true);
 }
 
 SwitcherButton::~SwitcherButton()
@@ -99,25 +98,26 @@ void SwitcherButton::exitDisplayEvent()
 
 void SwitcherButton::setVisibleInSwitcherProperty(bool set)
 {
-    if(visibilityPropertyEnabled && visibility != set) {
+    if (visibilityPropertyEnabled && (visibility != set || !visibilityInitialized)) {
         Display *dpy = QX11Info::display();
-        if (dpy) {
-            if (set) {
-                unsigned char data = 1;
-                X11Wrapper::XChangeProperty(dpy, xWindow(), visibleAtom, XA_CARDINAL, 8, PropModeReplace, &data, 1);
-            } else {
-                unsigned char data = 0;
-                X11Wrapper::XChangeProperty(dpy, xWindow(), visibleAtom, XA_CARDINAL, 8, PropModeReplace, &data, 1);
-            }
-            visibility = set;
+        if (set) {
+            unsigned char data = 1;
+            X11Wrapper::XChangeProperty(dpy, xWindow(), visibleAtom, XA_CARDINAL, 8, PropModeReplace, &data, 1);
+        } else {
+            unsigned char data = 0;
+            X11Wrapper::XChangeProperty(dpy, xWindow(), visibleAtom, XA_CARDINAL, 8, PropModeReplace, &data, 1);
         }
+
+        visibility = set;
+        visibilityInitialized = true;
     }
 }
 
 void SwitcherButton::setVisibilityPropertyEnabled(bool enable)
 {
     visibilityPropertyEnabled = enable;
-    if(enable) {
-        setVisibleInSwitcherProperty(isVisible());
+
+    if (enable) {
+        setVisibleInSwitcherProperty(isOnDisplay());
     }
 }
