@@ -1,7 +1,9 @@
 meegotouchhome (0.23.11~1) unstable; urgency=low
-  * [UNRELEASED]
 
- -- Eetu Lehmusvuo <ext-eetu.6.lehmusvuo@nokia.com>  Mon, 28 Feb 2011 14:14:17 +0200
+  * [UNRELEASED]
+  * Fixes: NB#230342 - _MEEGOTOUCH_VISIBLE_IN_SWITCHER not set
+
+ -- Vesa Halttunen <vesa.halttunen@nokia.com>  Wed, 02 Mar 2011 14:30:17 +0200
 
 meegotouchhome (0.23.10-1) unstable; urgency=low
 
